--- a/CourseWorkDb/Views/Shared/_Layout.cshtml
+++ b/CourseWorkDb/Views/Shared/_Layout.cshtml
@@ -87,7 +87,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; CourseWork Dmitry Dashkevich 2019
+            &copy; CourseWorkDb 2019
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
