--- a/CourseWorkDb/Views/Companies/Violators.cshtml
+++ b/CourseWorkDb/Views/Companies/Violators.cshtml
@@ -13,7 +13,7 @@
             <label class="control-label">Название предприятия </label>
         </div>
         <div class="col-4">
-            @Html.DropDownList("organization", Model.FilterViewModel.Companies as SelectList,
+            @Html.DropDownList("company", Model.FilterViewModel.Companies as SelectList,
                     htmlAttributes: new { @class = "form-control" })
         </div>
         <div class="col-1">
